# longshot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  FUTURE.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  api.py  broker.py  contract.py  events.py  keys.py  pipeline.py  publish.py  settings.py  tasks.py  worker.py
demo/: cancel.sh  chaos.sh  happy_path.sh
static/: index.html
tests/: test_smoke.py
