[project]
name = "longshot"
version = "0.1.0"
description = "TaskIQ + Redis Streams + SSE — decoupling long-running work from HTTP handlers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "longshot" }]
keywords = ["taskiq", "redis", "sse", "fastapi", "background-jobs", "demo"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "taskiq>=0.11.13",
    "taskiq-redis>=1.0.5",
    "redis>=5.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sse-starlette>=2.1",
    "httpx>=0.28",
    "selectolax>=0.3.27",
    "structlog>=24.4",
]

[project.optional-dependencies]
real = ["anthropic>=0.40"]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.urls]
Homepage = "https://github.com/AkshatSoni26/longshot"
Issues = "https://github.com/AkshatSoni26/longshot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
